[gd_scene load_steps=7 format=3 uid="uid://ivjh1ebkavp2"]

[ext_resource type="Script" uid="uid://c4uya847qx334" path="res://scenes/post_selection/post_selection.gd" id="1_00whi"]
[ext_resource type="Texture2D" uid="uid://cpo1rg37dfngy" path="res://assets/main_menu/background.png" id="2_x33sa"]
[ext_resource type="Texture2D" uid="uid://bspaqysmwi720" path="res://assets/potion_selection_assets/gato.png" id="3_ea2gx"]
[ext_resource type="Texture2D" uid="uid://biobq2pfddkf8" path="res://assets/potion_selection_assets/seller.png" id="4_n4y7s"]
[ext_resource type="PackedScene" uid="uid://dexyk2m4f8wgm" path="res://scenes/dialogue/dialogue_player.tscn" id="6_3hnj5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6q75f"]
texture = ExtResource("2_x33sa")

[node name="PostSelection" type="Node2D"]
script = ExtResource("1_00whi")

[node name="DefaultLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Panel" parent="DefaultLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_6q75f")

[node name="Gato" type="Sprite2D" parent="DefaultLayer"]
position = Vector2(388, 330)
scale = Vector2(2.592391, 2.592391)
texture = ExtResource("3_ea2gx")

[node name="Seller" type="Sprite2D" parent="DefaultLayer"]
position = Vector2(980, 250.00002)
scale = Vector2(3.097826, 3.0978262)
texture = ExtResource("4_n4y7s")

[node name="DialogPlayer" parent="DefaultLayer" instance=ExtResource("6_3hnj5")]
visibility_layer = 3
y_sort_enabled = true
texture_filter = 1
size_flags_vertical = 4
scene_text_file = "res://data/json/dialogs.json"
dialog_key = "blank"
title_key = "bruxa_vendedora_title"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="finished" from="DefaultLayer/DialogPlayer" to="." method="_on_dialog_player_finished"]
[connection signal="play_dialogue" from="DefaultLayer/DialogPlayer" to="DefaultLayer/DialogPlayer" method="_on_play_dialogue"]
